--- a/Array.ipynb
+++ b/Array.ipynb
@@ -214,7 +214,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -229,6 +231,56 @@
    ],
    "source": [
     "reverse(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## V. Leaders in an Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_leader(arr):\n",
+    "    if not arr: return -1\n",
+    "    elif len(arr) == 1: return arr[0]\n",
+    "    \n",
+    "    leaders = []\n",
+    "    \n",
+    "    for idx in range(len(arr)):\n",
+    "        n = arr[idx]\n",
+    "        next_sums = sum(arr[idx + 1:]) if idx < len(arr) - 1 else arr[-1]\n",
+    "        \n",
+    "        if n >= next_sums:\n",
+    "            leaders.append(n)\n",
+    "    \n",
+    "    return leaders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[17, 5, 2]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = [16, 17, 4, 3, 5, 2]\n",
+    "get_leader(arr)"
    ]
   },
   {
