--- a/BinaryHeap.ipynb
+++ b/BinaryHeap.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Binomial heap is a collectiona of binomial trees. Binomial tree of order 0 has 1 node. A binomial tree of order k can be constructed by taking two binomial trees of order k - 1 and making one as leftmost child of other."
+    "Binomial heap is a collection of binomial trees. Binomial tree of order 0 has 1 node. A binomial tree of order k can be constructed by taking two binomial trees of order k - 1 and making one as leftmost child of other."
    ]
   },
   {
@@ -159,11 +159,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## III. Fibonacci Heap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stores a list of trees of any shape. Each tree is a heap - each node is less than equal to its children. Keeps track of the min root of all trees. Its popmin, push, and decreasekey operations are relatively fast compared to binary hea, binomial heap, and linked list."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When an item is pushed to the heap, it creates a new tree with the element as the root."
+   ]
   }
  ],
  "metadata": {
