--- a/Graph.ipynb
+++ b/Graph.ipynb
@@ -328,6 +328,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Applications of DFS**\n",
+    "\n",
+    "1) For a weighted graph, DFS traversal of the graph produces the minimum spanning tree and all pair shortest path tree.\n",
+    "\n",
+    "2) Detecting cycle in a graph\n",
+    "\n",
+    "A graph has cycle if and only if we see a back edge during DFS. So we can run DFS for the graph and check for back edges.\n",
+    "\n",
+    "3) Path Finding\n",
+    "\n",
+    "We can specialize the DFS algorithm to find a path between two given vertices u and z.\n",
+    "i) Call DFS(G, u) with u as the start vertex.\n",
+    "ii) Use a stack S to keep track of the path between the start vertex and the current vertex.\n",
+    "iii) As soon as destination vertex z is encountered, return the path as the contents of the stack\n",
+    "\n",
+    "4) Topological Sorting\n",
+    "\n",
+    "Topological Sorting is mainly used for scheduling jobs from the given dependencies among jobs. In computer science, applications of this type arise in instruction scheduling, ordering of formula cell evaluation when recomputing formula values in spreadsheets, logic synthesis, determining the order of compilation tasks to perform in makefiles, data serialization, and resolving symbol dependencies in linkers.\n",
+    "\n",
+    "5) To test if a graph is bipartite\n",
+    "\n",
+    "We can augment either BFS or DFS when we first discover a new vertex, color it opposited its parents, and for each other edge, check it doesn’t link two vertices of the same color. The first vertex in any connected component can be red or black! \n",
+    "\n",
+    "6) Finding Strongly Connected Components of a graph \n",
+    "\n",
+    "A directed graph is called strongly connected if there is a path from each vertex in the graph to every other vertex. (See this for DFS based algo for finding Strongly Connected Components)\n",
+    "\n",
+    "7) Solving puzzles with only one solution, such as mazes. \n",
+    "\n",
+    "(DFS can be adapted to find all solutions to a maze by only including nodes on the current path in the visited set.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
