--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,53 +54,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert at end\n",
-    "def insert_end(self, n):\n",
-    "    node = self.head\n",
-    "    while node.next:\n",
-    "        node = node.next\n",
-    "    node.next = n"
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "    # Insert at end\n",
+    "    def insert_end(self, n):\n",
+    "        if self.head is None:\n",
+    "            self.head = LinkNode(n)\n",
+    "            return \n",
+    "        \n",
+    "        node = self.head\n",
+    "        while node.next:\n",
+    "            node = node.next\n",
+    "        node.next = LinkNode(n)\n",
+    "        \n",
+    "    # Insert a new node at the beginning \n",
+    "    def insert_beginning(self, new_data): \n",
+    "\n",
+    "        # 1 & 2: Allocate the Node & \n",
+    "        #        Put in the data \n",
+    "        new_node = Node(new_data) \n",
+    "\n",
+    "        # 3. Make next of new Node as head \n",
+    "        new_node.next = self.head \n",
+    "\n",
+    "        # 4. Move the head to point to new Node  \n",
+    "        self.head = new_node \n",
+    "    # Insert at index\n",
+    "    def insert(self, prev_node, new_data):\n",
+    "        next_node = prev_node.next if prev_node.next else None\n",
+    "\n",
+    "        prev_node.next = Node(new_data)\n",
+    "        prev_node.next.next = next_node\n",
+    "\n",
+    "        return self.head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## III. Delete"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert a new node at the beginning \n",
-    "def insert_beginning(self, new_data): \n",
-    "  \n",
-    "    # 1 & 2: Allocate the Node & \n",
-    "    #        Put in the data \n",
-    "    new_node = Node(new_data) \n",
-    "          \n",
-    "    # 3. Make next of new Node as head \n",
-    "    new_node.next = self.head \n",
-    "          \n",
-    "    # 4. Move the head to point to new Node  \n",
-    "    self.head = new_node "
+    "class LinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "    # Insert at end\n",
+    "    def insert_end(self, n):\n",
+    "        if self.head is None:\n",
+    "            self.head = LinkNode(n)\n",
+    "            return \n",
+    "        \n",
+    "        node = self.head\n",
+    "        while node.next:\n",
+    "            node = node.next\n",
+    "        node.next = LinkNode(n)\n",
+    "        \n",
+    "    def delete(self, val):\n",
+    "        head = self.head\n",
+    "        if head is None or head.next is None:\n",
+    "            return head\n",
+    "    \n",
+    "        prev = None\n",
+    "        while head.next:\n",
+    "            if head.val == val:\n",
+    "                if prev is None:\n",
+    "                    new_head = head.next\n",
+    "                    head.next = None\n",
+    "                    self.head = new_head\n",
+    "                    break\n",
+    "            \n",
+    "                prev.next = head.next\n",
+    "                break\n",
+    "                \n",
+    "            prev = head\n",
+    "            head = head.next\n",
+    "        \n",
+    "        return self.head"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llist = LinkedList()  \n",
+    "llist.insert_end(7)  \n",
+    "llist.insert_end(1)  \n",
+    "llist.insert_end(3)  \n",
+    "llist.insert_end(2)\n",
+    "llist.delete(1).val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Insert at index\n",
-    "def insert(self, prev_node, new_data):\n",
-    "    next_node = prev_node.next if prev_node.next else None\n",
-    "    \n",
-    "    prev_node.next = Node(new_data)\n",
-    "    prev_node.next.next = next_node\n",
-    "    \n",
-    "    return self.head"
-   ]
+   "source": []
   }
  ],
  "metadata": {
