--- a/Stack.ipynb
+++ b/Stack.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
     "            self.head = None\n",
     "            return root\n",
     "        \n",
-    "        prev = None\n",
+    "        prev = root\n",
     "        while root.next:\n",
     "            prev = root\n",
     "            root = root.next\n",
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "2"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +155,7 @@
        "2"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "-1"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
