adding doubly linked list

--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -170,11 +170,82 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Doubly Linked List"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class DoublyLinkedNode:\n",
+    "    def __init__(self, val):\n",
+    "        self.prev = None\n",
+    "        self.next = None\n",
+    "        self.val = val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DoublyLinkedList:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        \n",
+    "    def insert(self, val, idx):\n",
+    "        node = DoublyLinkedNode(val)\n",
+    "\n",
+    "        if self.head is None:\n",
+    "            self.head = node\n",
+    "        elif idx == 0:\n",
+    "            node.next = self.head\n",
+    "            self.head.prev = node\n",
+    "            self.head = node\n",
+    "        else:\n",
+    "            n = self.head\n",
+    "            prev = None\n",
+    "            while n.next and idx:\n",
+    "                prev = n\n",
+    "                n = n.next\n",
+    "                idx -= 1\n",
+    "               \n",
+    "            prev.next = node\n",
+    "            node.next = n\n",
+    "            n.prev = node\n",
+    "            \n",
+    "        return self.head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llist = DoublyLinkedList()\n",
+    "llist.insert(1, 0).val\n",
+    "llist.insert(2, 0).val\n",
+    "llist.insert(3, 1).val\n",
+    "llist.insert(4, 0).val"
+   ]
   }
  ],
  "metadata": {
