--- a/DivideAndConquer.ipynb
+++ b/DivideAndConquer.ipynb
@@ -64,6 +64,69 @@
     "O(1) if n is small\\\n",
     "T(n) = f1(n) + 2T(n/2) + f2(n)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. pow(x,n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pow(x, n):\n",
+    "    if n == 0: return 1\n",
+    "    \n",
+    "    p = pow(x, int(n/2))\n",
+    "    \n",
+    "    if n % 2 == 0:\n",
+    "        return p * p\n",
+    "    else:\n",
+    "        if n > 0:\n",
+    "            return x * p * p # makes up for the int cast\n",
+    "        else:\n",
+    "            return p * p / x # again, makes up for the int cast for a negative value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.125"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = 2\n",
+    "y = -3\n",
+    "pow(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time Complexity of optimized solution: O(logn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
