--- a/Sorting.ipynb
+++ b/Sorting.ipynb
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Worst and Average Case Time Complexity: O(n*n). Worst case occurs when array is reverse sorted.\n",
+    "Worst and Average Case Time Complexity: $O(n^2)$. Worst case occurs when array is reverse sorted.\n",
     "\n",
     "Best Case Time Complexity: O(n). Best case occurs when array is already sorted.\n",
     "\n",
@@ -208,9 +208,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Time Complexity: O(n*2)\n",
+    "Time Complexity: $O(2n)$\n",
     "\n",
     "Auxiliary Space: O(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use binary search to reduce the number of comparisons in normal insertion sort. Binary Insertion Sort uses binary search to find the proper location to insert the selected item at each iteration. In normal insertion, sorting takes O(i) (at ith iteration) in worst case. We can reduce it to O(logi) by using binary search. The algorithm, as a whole, still has a running worst case running time of O(n2) because of the series of swaps required for each insertion. Refer this for implementation."
    ]
   },
   {
@@ -247,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -296,13 +303,13 @@
        "[5, 6, 7, 11, 12, 13]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arr = [12, 11, 13, 5, 6, 7]\n",
+    "arr = [5, 11, 7, 6, 12, 13]\n",
     "merge_sort(arr)"
    ]
   },
@@ -457,6 +464,151 @@
    "metadata": {},
    "source": [
     "Most practical implementations of Quick Sort use randomized version. The randomized version has expected time complexity of O(nLogn). The worst case is possible in randomized version also, but worst case doesn’t occur for a particular pattern (like sorted array) and randomized Quick Sort works well in practice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Heap Sort"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A complete binary tree is a binary tree in which every level, except possibly the last, is completely filled, and all nodes are as far left as possible (Source Wikipedia)\n",
+    "\n",
+    "A Binary Heap is a Complete Binary Tree where items are stored in a special order such that value in a parent node is greater(or smaller) than the values in its two children nodes. The former is called as max heap and the latter is called min heap"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the parent node is stored at index I, the left child can be calculated by 2 * I + 1 and right child by 2 * I + 2 (assuming the indexing starts at 0)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Heap Sort Algorithm for sorting in increasing order:\n",
+    "1. Build a max heap from the input data (heapify)\n",
+    "2. Replace the root with the last item of the heap.\n",
+    "3. Finally, heapify the root of tree.\n",
+    "4. Repeat above steps 2 and 3 while size of heap is greater than 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 8, 7]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "h = [1, 3, 5, 7, 9, 2, 4, 6, 8, 0]\n",
+    "heapq.heapify(h)\n",
+    "print(heapq.nlargest(3, h))\n",
+    "[ heapq.heappop(h) for x in range(len(h)) ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def heapify(arr, length, idx):\n",
+    "    root = idx\n",
+    "    left = 2 * idx + 1\n",
+    "    right = 2 * idx + 2\n",
+    "    \n",
+    "    # See if left child of root exists and is \n",
+    "    # greater than root\n",
+    "    if left < length and arr[idx] < arr[left]:\n",
+    "        root = left\n",
+    "    \n",
+    "    # See if right child of root exists and is \n",
+    "    # greater than root\n",
+    "    if right < length and arr[root] < arr[right]:\n",
+    "        root = right\n",
+    "    \n",
+    "    # Basically, search for children of greater value and switch\n",
+    "    if root != idx:\n",
+    "        arr[idx], arr[root] = arr[root], arr[idx]\n",
+    "        heapify(arr, length, root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def heap_sort(arr):\n",
+    "    l = len(arr)\n",
+    "    \n",
+    "    # from l to 0 in reverse order\n",
+    "    # maxheap\n",
+    "    for i in range(l, -1, -1):\n",
+    "        heapify(arr, l, i)\n",
+    "    \n",
+    "    # Swap with the root element at the center\n",
+    "    # l - 1: nodes are indexed 0\n",
+    "    # 0 to exclude the root\n",
+    "    # -1 to increment in reverse\n",
+    "    for i in range(l - 1, 0, -1):\n",
+    "        arr[i], arr[0] = arr[0], arr[i]\n",
+    "        heapify(arr, i, 0)\n",
+    "        \n",
+    "    return arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = [1, 3, 5, 7, 9, 2, 4, 6, 8, 0]\n",
+    "heap_sort(h)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Time Complexity: Time complexity of heapify is O(Logn). Time complexity of createAndBuildHeap() is O(n) and overall time complexity of Heap Sort is O(nLogn)."
    ]
   },
   {
